Bugzilla bug 237183: adds an exception handler for every NSPR thread that is created.  It also exports two functions to set and unset the exception handler function so they can be used by the primordial thread.  The patch is contributed by Javier Pedemonte <pedemont@us.ibm.com>. r=wtc. Modified Files: pprthred.h os2extra.def os2thred.c